--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -16,7 +16,7 @@
 }
 
 .Button2 {
-  background-color: transparent;
+  background-color: crimson;
   border: none;
   outline: none;
   cursor: pointer;
@@ -24,7 +24,7 @@
   padding: 10px;
   margin: 10px;
   font-weight: bold;
-  color: #944317;
+  color: #fff;
 }
 
 .Button1:disabled {
